# ha-kilowahti

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
custom_components/kilowahti/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  number.py  sensor.py  services.py  services.yaml  storage.py  strings.json
custom_components/kilowahti/price_source/: __init__.py  spot_hinta.py
custom_components/kilowahti/translations/: en.json  fi.json
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_imports.py  test_number.py  test_sensor.py  test_services.py
tests/fixtures/: spot_hinta_today_fi.json  spot_hinta_tomorrow_fi.json
